network init
